<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_meditation">

    <fragment
        android:id="@+id/navigation_meditation"
        android:name="de.jeisfeld.mymeditation.ui.meditation.MeditationFragment"
        android:label="@string/title_meditation"
        tools:layout="@layout/fragment_meditation" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="de.jeisfeld.mymeditation.ui.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />

    <fragment
        android:id="@+id/navigation_saved_meditations"
        android:name="de.jeisfeld.mymeditation.ui.savedmeditations.SavedMeditationsFragment"
        android:label="@string/title_saved_meditations"
        tools:layout="@layout/fragment_saved_meditations" />
</navigation>