<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="?attr/actionBarSize">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:labelFor="@id/editTextMeditationContent"
        android:text="@string/label_meditation_content"
        android:textSize="@dimen/text_size_content" />

    <EditText
        android:id="@+id/editTextMeditationContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/editText_horizontal_margin"
        android:layout_marginEnd="@dimen/editText_horizontal_margin"
        android:layout_weight="0.8"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textSize="@dimen/text_size_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:labelFor="@id/editTextPauseDuration"
        android:text="@string/label_pause_duration"
        android:textSize="@dimen/text_size_content" />

    <EditText
        android:id="@+id/editTextPauseDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editText_horizontal_margin"
        android:layout_marginEnd="@dimen/editText_horizontal_margin"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="@dimen/text_size_content" />

    <Button
        android:id="@+id/buttonCreateMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/single_button_horizontal_margin"
        android:layout_marginEnd="@dimen/single_button_horizontal_margin"
        android:text="@string/button_create_meditation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:labelFor="@id/editTextMeditationText"
        android:text="@string/label_meditation_text"
        android:textSize="@dimen/text_size_content" />

    <EditText
        android:id="@+id/editTextMeditationText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/editText_horizontal_margin"
        android:layout_marginEnd="@dimen/editText_horizontal_margin"
        android:layout_weight="1"
        android:gravity="top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textSize="@dimen/text_size_content" />

    <Button
        android:id="@+id/buttonSpeakMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/single_button_horizontal_margin"
        android:layout_marginEnd="@dimen/single_button_horizontal_margin"
        android:text="@string/button_speak_meditation" />

    <Button
        android:id="@+id/buttonPauseMeditation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/single_button_horizontal_margin"
        android:layout_marginEnd="@dimen/single_button_horizontal_margin"
        android:text="@string/button_pause_meditation" />

    <SeekBar
        android:id="@+id/seekBarAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/editText_horizontal_margin"
        android:layout_marginEnd="@dimen/editText_horizontal_margin"
        android:indeterminate="false"
        android:min="0"
        android:max="100"
        android:progress="0" />

</LinearLayout>
